--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Les News du Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icons/favicon.ico" />
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="icons/favicon-32x32.png" />
+    <meta name="theme-color" content="#002631">
+    <meta name="apple-mobile-web-app-status-bar" content="#002631" />
 </head>
 <body>
     <header>
