--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta name="apple-mobile-web-app-status-bar" content="#002631" />
 </head>
 <body>
+    <button id="installButton" class="install-button">
+        <img src="images/telecharger.png" alt="Installer l'application">
+    </button>
     <header>
         <img src="images/Designer.png" alt="Les News du Web" class="site-logo">
         <h1 class="header-title">Les News du Web</h1>
@@ -48,5 +51,6 @@
         <p>© 2024 Les News du Web - Tous droits réservés</p>
     </footer>
     <script src="main.js" defer></script>
+    <script src="install.js" defer></script>
 </body>
 </html>
